Updated html scripts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
     <h1>What time is it?</h1>
     <h2>It's <span id='date-time'></span>.</h2>
-    <img src="cat.jpg" width="500" alt="pug">
+    <!-- <span id='date-time'></span> -->
+    <img src="images/clock-guy.png" height="400" alt="a cartoon guy holding a clock">
+    <script src="scripts/github-actions-activity.js"></script>
 </body>
 </html>
