--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>What time is it?</h1>
     <h2>It's <span id='time'></span>.</h2>
-    <img src="images/clock-guy.png" height="400" alt="a cartoon guy holding a clock">
-    <script src="scripts/github-actions-activity.js"></script>
+    <img src="clock-guy.png" height="400" alt="a cartoon guy holding a clock">
+    <script src="bundle.js"></script>
 </body>
 </html>
