--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     </head>
 <body>
     <h1>What time is it?</h1>
-    <h2>It's <span id='time'></span>.</h2>
+    <h2>It was <span id='time'></span>.</h2>
     <img src="clock-guy.png" height="400" alt="a cartoon guy holding a clock">
     <script src="bundle.js"></script>
 </body>
